fix: :bug: fix content images not showing up due to invalid position of components

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,18 +1,20 @@
-@import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap");
-@import "variables";
-@import "mixins";
-@import "../components/**/*.scss"; // find scss files in whole components directory tree
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap');
+@import 'variables';
+@import 'mixins';
+@import '../components/**/*.scss'; // find scss files in whole components directory tree
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-display: swap;
-  position: relative;
 }
 
-html, body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Roboto Light", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+html,
+body {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Roboto Light', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif,
+    'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
   font-size: 16px;
   scroll-behavior: smooth;
 }
@@ -59,7 +61,6 @@ a {
   color: red;
   background-color: #ffcccc;
 }
-
 
 .githubSection {
   display: flex;
@@ -228,4 +229,11 @@ img {
 
 .hidden {
   display: none;
+}
+
+.gatsby-resp-image-figcaption {
+  text-align: center;
+  font-style: italic;
+  margin-top: 5px;
+  font-size: 14px;
 }
